--- a/src/app.html
+++ b/src/app.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.svg" />
+    <link refl="manifest" href="manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover" class="dark">
-    <div style="display: contents">%sveltekit.body%</div>
+  <body data-sveltekit-preload-data="hover" class="dark dark:bg-gray-800">
+    %sveltekit.body%
   </body>
 </html>
